--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,10 @@ spring.thymeleaf.cache = false
 #mybatis-plus.mapper-locations=classpath*:mapper/*.xml
 #mybatis-plus.typeAliasesPackage=com.example.work3.entity
 
+#热部署生效
+spring.devtools.restart.enabled=true
+#设置重启的目录,添加那个目录的文件需要restart
+spring.devtools.restart.additional-paths=src/main/java
 
 logging.level.com.gk.secondhand.dao=debug
 #logging.level.org.springframework=debug
